# OminiRAG

./: .gitignore  .gitmodules  INSTALL_AND_TEST.md  README.md  install_checker.py  main.py  pyproject.toml  real_selfrag_swap_demo.py  real_swap_demo.py  wtb-0.2.0-py3-none-any.whl  wtb-0.2.2-py3-none-any.whl  wtb-0.2.3-py3-none-any.whl  wtb_demo.py  规划.md
AG-UCT/: .gitignore  README.md
Benchmark_Sampling/: .gitignore  README.md  main.py  pyproject.toml
Benchmark_Sampling/bsamp/loader/: ALCE.py  FreshWiki.py  UltraDomain.py  hotpot_qa.py
Benchmark_Sampling/bsamp/sampling/: __init__.py  budget.py  comparison.py  diagnostics.py  engine.py  estimator.py  stratification.py  types.py
Benchmark_Sampling/bsamp/sampling/adapters/: __init__.py  alce.py  base.py  freshwiki.py  hotpotqa.py  ultradomain.py
Benchmark_Sampling/bsamp/sampling/integration/: ray_parallel.py  wtb.py
Benchmark_Sampling/bsamp/sampling/samplers/: __init__.py  base.py  mh.py  stratified.py
Benchmark_Sampling/bsamp/scoring/: __init__.py  evaluator.py  metrics.py  scoring.py  types.py
Benchmark_Sampling/tests/: test_budget.py  test_comparison.py  test_estimator.py  test_integration_ray_parallel.py  test_integration_sampling.py  test_integration_wtb.py  test_real_data_sampling.py  test_sampler_mh.py  test_sampler_stratified.py  test_scoring.py  test_stratification.py  test_types.py
benchmark/: alce_adapter.py  base_adapter.py  hotpotqa_adapter.py  ultradomain_adapter.py
data/: wtb.db  wtb_checkpoints.db
demos/: run_benchmark_demo.py  run_real_llm_benchmark.py
lightrag_langgraph/: __init__.py  adapters.py  main_pipeline.py  state.py
ominirag_wtb/: __init__.py  batch_runner.py  cache_aware_evaluator.py  config_types.py  graph_factories.py  reuse_ledger.py
rag_contracts/: __init__.py  common_components.py  (+7 more)
(+67 files in other folders)
